# astro_rms

./: MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
astro_rms/: cli.py  region_slices.py
docs/: conf.py  index.rst
docs/astro_rms/: index.rst
