[metadata]
name = astro_rms
author = Zhiyuan Ma
author_email = zhiyuanma@umass.edu
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = to.be.set
description = AstroRMS revived
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = Jerry-Ma/astro_rms

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    astropy
    numpy
    scipy
    pyaml


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy


[options.entry_points]
console_scripts =
    astro_rms = astro_rms.cli:main


[options.package_data]
astro_rms = data/*

[tool:pytest]
testpaths = "astro_rms" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    astro_rms/_astropy_init*
    astro_rms/conftest.py
    astro_rms/*setup_package*
    astro_rms/tests/*
    astro_rms/*/tests/*
    astro_rms/extern/*
    astro_rms/version*
    */astro_rms/_astropy_init*
    */astro_rms/conftest.py
    */astro_rms/*setup_package*
    */astro_rms/tests/*
    */astro_rms/*/tests/*
    */astro_rms/extern/*
    */astro_rms/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
